뷰 username,status  으로 수정됨  postId아직 진행중

--- a/plzProject-main/src/main/resources/templates/posting/requestView.html
+++ b/plzProject-main/src/main/resources/templates/posting/requestView.html
@@ -14,8 +14,8 @@
         <th>Content</th>
         <th>Registration Date</th>
         <th>Post ID</th>
-        <th>Request Status ID</th>
-        <th>User ID</th>
+        <th>Status</th>
+        <th>User Name</th>
         <th>Title</th>
       </tr>
       </thead>
@@ -26,8 +26,8 @@
         <td th:text="${request.content}">Content</td>
         <td th:text="${request.regDate}">Registration Date</td>
         <td th:text="${request.postId}">Post ID</td>
-        <td th:text="${request.requestStatusId}">Request Status ID</td>
-        <td th:text="${request.userId}">User ID</td>
+        <td th:text="${request.status}">Request Status ID</td>
+        <td th:text="${request.username}">User ID</td>
         <td th:text="${request.title}">Title</td>
       </tr>
       </tbody>
