--- a/plzProject-main/src/main/resources/templates/posting/requestView.html
+++ b/plzProject-main/src/main/resources/templates/posting/requestView.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/basic.html}">
 
-
+<body>
 <div layout:fragment="content">
   <div class="container mt-3">
     <h1>Request List</h1>
@@ -31,7 +31,7 @@
         <td th:text="${request.username}">User ID</td>
         <td th:text="${request.title}">Title</td>
         <td>
-          <button type="button" class="btn btn-danger" th:attr="onclick='deleteRequest(' + ${request.requestId} + ')'">
+          <button type="button" class="btn btn-danger" th:onclick="'deleteRequest(' + ${request.requestId} + ')'">
             삭제
           </button>
         </td>
@@ -44,6 +44,7 @@
 
 <script>
   function deleteRequest(requestId) {
+    console.log("Request ID to delete:", requestId);
     if (confirm("정말로 이 신청을 삭제하시겠습니까?")) {
       fetch(`/request/delete/${requestId}`, {
         method: 'DELETE'
@@ -66,4 +67,5 @@
   }
 </script>
 
-
+</body>
+</html>
